<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="percent_15">15%</string>
    <string name="total_text">Total</string>
    <string name="tip_label">Tip</string>
    <string name="minimus">-</string>
    <string name="add">+</string>
    <string name="percent_label">Percent</string>

    <string-array name="spinner_array" >
        <item>Chọn</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>
</resources>