<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#ccc"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="@dimen/text_size_30"
            app:drawableStartCompat="@drawable/baseline_calculate_24"
            app:drawableTint="#981A1A" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:gravity="fill_vertical"
            android:text="@string/bill_amount"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/bill_amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="@string/app_name"
            android:hint="@string/app_name"
            android:inputType="number" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="match_parent"

            android:layout_marginStart="20dp"
            android:gravity="fill_vertical"
            android:text="@string/percent_label"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"

            >

            <TextView

                android:id="@+id/value_percent"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:gravity="center_vertical"
                android:text="@string/percent_15"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_add"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:text="@string/add" />

            <Button
                android:id="@+id/btn_drop"
                android:layout_width="50dp"

                android:layout_height="match_parent"
                android:text="@string/minimus" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:gravity="fill_vertical"
            android:text="@string/tip_label"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView

            android:id="@+id/value_tip"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:gravity="center_vertical"
            android:text="@string/percent_15"
            android:textSize="20sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:gravity="fill_vertical"
            android:text="@string/total_text"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView

            android:id="@+id/value_total"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:gravity="center_vertical"
            android:text="@string/percent_15"
            android:textSize="20sp" />


    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dividerColor="@color/black"
        android:layout_margin="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Rounding:"
            android:textSize="25sp"
            android:layout_weight="1"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_weight="8"
            android:id="@+id/round_rg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="No Rounding" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Round Tip" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Round Total" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Split The Bill:"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Seek Bar:"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="match_parent">
            <SeekBar
                android:max="100"
                android:progress="15"
                android:id="@+id/seek_bar_percent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_weight="1" />

            <TextView
                android:id="@+id/txt_seek_bar_percent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="10%" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">


            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
android:textSize="20sp"
                android:text="Remmber Tip Percent"
                />

    </LinearLayout>
</LinearLayout>